--- a/GenCon-iOS/Podfile
+++ b/GenCon-iOS/Podfile
@@ -13,4 +13,5 @@ target 'GenCon-iOS' do
   pod 'RxSwift'
   pod 'Material'
   pod 'R.swift'
+  pod 'SVGKit', :git => 'https://github.com/SVGKit/SVGKit.git', :branch => '2.x'
 end
